--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		    <video id="camera--view" autoplay playsinline></video>
 		    
 		    <!-- Camera output -->
-		    <img src="//:0" alt="" id="camera--output">
+		    <img src="//:0" download="output.png" alt="" id="camera--output">
 
 		    <!-- Camera trigger -->
 		    <button id="camera--trigger">Take a picture</button>
