--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	</head>
 	<body>
 
+		<audio autoplay>
+		 <source src="./public/greetings.mp3" type="audio/mpeg">
+		</audio>
+
 		<!-- Camera -->
 		<main id="camera">
 
